# twfy-vector-explorer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: agreement_search.ipynb  basic_search.ipynb  basic_search_ngram.ipynb  join_ngram.ipynb  motion_start_search.ipynb  n_gram_creator.ipynb  one_line_questions.ipynb  reasons.ipynb  register_of_interests.ipynb  search_test.ipynb  split_big_embeddings.ipynb
script/: manage  server  update
src/: manage.py
src/twfy_vector_explorer/: asgi.py  notebook_setup.py  settings.py  urls.py  wsgi.py
src/vector_explorer/: apps.py  data_manager.py  models.py
src/vector_explorer/data_models/: data_manager.py  transcripts.py
src/vector_explorer/data_models/helpers/: xml_base.py
src/vector_explorer/management/commands/: infer.py  infer_ngram.py
src/vector_explorer/migrations/: 0001_initial.py  0002_remove_paragraphvector_paragraph_id_and_more.py  0003_paragraphvector_nhsw_index.py  0004_ngramvector.py  0005_ngramvector_count.py
src/vector_explorer/tools/: inference.py  model_helpers.py
