[tool.poetry]
name = "twfy-vector-explorer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
django = "4.2.14"
pgvector = "^0.3.1"
pydantic = "^2.8.2"
lxml = "^5.2.2"
fastembed = "^0.3.4"
sysrsync = "^1.1.1"
rich = "^13.7.1"
pandas = "^2.2.2"
tqdm = "^4.66.4"
pyarrow = "^17.0.0"

[tool.poetry.dev-dependencies]
ruff = "^0.4.9"


[tool.poetry.group.dev.dependencies]
pgcli = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # line too long, sorted with formatter where it can be
    "E501", 
]


[tool.ruff.lint.isort]
known-first-party = ["hub"]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
django = ["django"]